# beam2

src/: CMakeLists.txt
src/beam/exe/: CMakeLists.txt  beamformer.cpp  simple_vad.cpp  vad_annotation.cpp  xbox_vad.cpp
src/beam/lib/: CMakeLists.txt  DelaySumBeamformer.h  FFT.cpp  FFT.h  GlobalConfig.h  MVDRBeamformer.cpp  MVDRBeamformer.h  Microphone.h  MsrNS.h  MsrVAD.cpp  MsrVAD.h  Pipeline.cpp  Pipeline.h  SRP.cpp  SRP.h  SimpleVAD.cpp  SimpleVAD.h
src/beam/script/: evaluate_simple_vad.py  evaluate_xbox_vad.py  run_vad.py
